<resources>

    <!-- Nom de l'application -->
    <string name="app_name">Bobaune</string>

    <!-- Rubriques -->
    <string name="home_page_calendar">Calendrier</string>
    <string name="home_page_market">Courses</string>
    <string name="home_page_media">Media</string>
    <string name="home_page_book">Livres</string>
    <string name="home_page_animal">Animaux</string>
    <string name="home_page_plant">Plantes</string>

    <!-- Page de Collection -->
    <string name="collection_page_title">Ma collection</string>

    <!-- Page d'ajout de plantes' -->
    <string name="add_plant_page_title">Ajout d\'une plantes</string>
    <string name="add_plant_page_upload_button">Charger Image</string>
    <string name="add_plant_page_name_input">@string/item_plant_name</string>
    <string name="add_plant_page_description_input">@string/item_plant_description</string>

    <string-array name="add_plant_page_grow_spinner_input">
        <item>Croissance : Lente</item>
        <item>Croissance : Moyenne</item>
        <item>Croissance : Rapide</item>
    </string-array>

    <string-array name="add_plant_page_water_spinner_input">
        <item>Consommation : Faible</item>
        <item>Consommation : Moyenne</item>
        <item>Consommation : Elevee</item>
    </string-array>

    <string name="plant_img">Image linked to each plant</string>

    <string name="add_plant_page_confirm_button">Confirmer</string>

    <!-- Fenêtre Popup de détail-->
    <string name="popup_plant_name">Plante</string>
    <string name="popup_plant_description_title">Description</string>
    <string name="popup_plant_description_subtitle">Petite Description</string>

    <string name="popup_plant_grow_title">Croissance</string>
    <string name="popup_plant_grow_subtitle">Lente</string>

    <string name="popup_plant_water_title">Consommation Eau</string>
    <string name="popup_plant_water_subtitle">Faible</string>

    <!-- Plante Customise -->
    <string name="item_plant_name">Nom de la Plante</string>
    <string name="item_plant_description">Description de la Plante</string>

</resources>