<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="360dp"
    android:layout_height="500dp"
    android:padding="@dimen/item_margin"
    >

    <!-- Bandeau avec l'image et le nom de la plante, ainsi que la croix de fermeture de popup -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/trending1" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/popup_plant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_plant_name"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        style="@style/TitleTextStyle"
        android:layout_marginLeft="@dimen/default_margin"
        />

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="@dimen/default_icon_size"
        android:layout_height="@dimen/default_icon_size"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!-- Bloc de Description de la plante -->
    <TextView
        android:id="@+id/popup_plant_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_plant_description_title"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        style="@style/TitleTextStyle"
        />

    <TextView
        android:id="@+id/popup_plant_description_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_plant_description_subtitle"
        app:layout_constraintStart_toStartOf="@+id/popup_plant_description_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_plant_description_title"
        style="@style/DefaultTextStyle"
        />


    <!-- Bloc de Croissance de la plante -->
    <TextView
        android:id="@+id/popup_plant_grow_title"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_plant_grow_title"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="@+id/popup_plant_description_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/popup_plant_description_subtitle" />

    <TextView
        android:id="@+id/popup_plant_grow_subtitle"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_plant_grow_subtitle"
        app:layout_constraintStart_toStartOf="@+id/popup_plant_grow_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_plant_grow_title" />

    <!-- Bloc de Consommation d'eau -->
    <TextView
        android:id="@+id/popup_plant_water_title"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_plant_water_title"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="@+id/popup_plant_grow_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/popup_plant_grow_subtitle" />

    <TextView
        android:id="@+id/popup_plant_water_subtitle"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_plant_water_subtitle"
        app:layout_constraintStart_toStartOf="@+id/popup_plant_water_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_plant_water_title" />

    <!-- Bloc de Suppression/Like de la plante -->
    <View
        android:id="@+id/view_separation"
        android:layout_width="1dp"
        android:layout_height="@dimen/default_icon_size"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_plant_water_subtitle" />

    <ImageView
        android:id="@+id/delete_button"
        android:layout_width="@dimen/default_icon_size"
        android:layout_height="@dimen/default_icon_size"
        android:src="@drawable/ic_trash"
        app:layout_constraintEnd_toStartOf="@+id/view_separation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_separation" />

    <ImageView
        android:id="@+id/like_button"
        android:layout_width="@dimen/default_icon_size"
        android:layout_height="@dimen/default_icon_size"
        android:src="@drawable/ic_unlike"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_separation"
        app:layout_constraintTop_toTopOf="@+id/view_separation" />

</androidx.constraintlayout.widget.ConstraintLayout>