<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Rectangle contenant l'image de la plante -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <ImageView
            android:id="@+id/image_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/trending2"
            android:contentDescription="@string/plant_img" />
    </androidx.cardview.widget.CardView>

    <!-- Trait pour symétriser le nom et la description de la plante par rapport à l'image (invisible) -->
    <View
        android:id="@+id/view_separation"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Nom de la plante :
    Le dessous matche avec le dessus du trait de séparation
    La gauche matche avec la droite de l'image -->
    <TextView
        android:id="@+id/name_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_plant_name"
        style="@style/SubTitleTextStyle"
        android:layout_marginStart="@dimen/item_margin"
        app:layout_constraintBottom_toTopOf="@+id/view_separation"
        app:layout_constraintStart_toEndOf="@+id/card_view" />

    <!-- Description de la plante :
    Le dessus matche avec le dessous du trait de séparation
    La gauche matche avec la droite de l'image -->
    <TextView
        android:id="@+id/description_item"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_plant_description"
        app:layout_constraintStart_toStartOf="@+id/name_item"
        app:layout_constraintTop_toBottomOf="@+id/view_separation" />

    <!-- Etoile de like de la plante :
    Elle est alignée par rapport à l'image -->
    <ImageView
        android:id="@+id/star_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_unlike"
        app:layout_constraintBottom_toBottomOf="@+id/card_view"
        app:layout_constraintEnd_toEndOf="@+id/view_separation"
        app:layout_constraintTop_toTopOf="@+id/card_view"
        android:layout_marginEnd="@dimen/default_margin"/>
</androidx.constraintlayout.widget.ConstraintLayout>